manifests/kind/apps/actual/apps_v1_deployment_actual-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/component: application
    app.kubernetes.io/instance: actual
    app.kubernetes.io/name: actual-server
    app.kubernetes.io/part-of: actual
  name: actual-server
  namespace: actual
spec:
  selector:
    matchLabels:
      app.kubernetes.io/component: application
      app.kubernetes.io/instance: actual
      app.kubernetes.io/name: actual-server
      app.kubernetes.io/part-of: actual
  template:
    metadata:
      labels:
        app.kubernetes.io/component: application
        app.kubernetes.io/instance: actual
        app.kubernetes.io/name: actual-server
        app.kubernetes.io/part-of: actual
    spec:
      affinity:
        podAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchLabels:
                app.kubernetes.io/component: application
                app.kubernetes.io/instance: actual
                app.kubernetes.io/name: actual-server
                app.kubernetes.io/part-of: actual
            topologyKey: kubernetes.io/hostname
      containers:
      - envFrom:
        - configMapRef:
            name: actual-server-env-9h4m7b42th
        - secretRef:
            name: actual-server-env
        image: ghcr.io/actualbudget/actual-server:25.7.1@sha256:b6bb759f31d1c2c82a37d04f9d8930359ae8e3b3faa8eaa5338a0a2328702908
        name: actual-server
        ports:
        - containerPort: 5006
          protocol: TCP
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
        volumeMounts:
        - mountPath: /bundle.pem
          name: ca-bundle
          subPath: bundle.pem
        - mountPath: /data
          name: data
        - mountPath: /data/config.json
          name: config
          subPath: config.json
        - mountPath: /app/app.js
          name: bootstrap
          subPath: app.js
      securityContext:
        fsGroup: 1001
        runAsGroup: 1001
        runAsNonRoot: true
        runAsUser: 1001
        seccompProfile:
          type: RuntimeDefault
      volumes:
      - configMap:
          name: actual-server-cluster-ca
        name: ca-bundle
      - name: data
        persistentVolumeClaim:
          claimName: actual-server-data
      - name: config
        secret:
          secretName: actual-server-config
      - configMap:
          name: actual-server-bootstrap-7hbg98849g
        name: bootstrap
