manifests/kind/apps/actual/gateway.networking.k8s.io_v1_httproute_actual.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  labels:
    app.kubernetes.io/component: application
    app.kubernetes.io/instance: actual
    app.kubernetes.io/part-of: actual
  name: actual
  namespace: actual
spec:
  hostnames:
  - actual.172.18.0.9.nip.io
  parentRefs:
  - kind: Gateway
    name: actual
  rules:
  - backendRefs:
    - name: actual-server
      port: 80
